{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 3373,
  "lineage": "47a37d04-7770-26a0-717b-a7098f352135",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "default_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:382376429664:internet-gateway/igw-0e76c0199b64d26ca",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-0ec4ebc165b30fcd0"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-0ec4ebc165b30fcd0"
                ]
              }
            ],
            "id": "igw-0e76c0199b64d26ca",
            "internet_gateway_id": "igw-0e76c0199b64d26ca",
            "owner_id": "382376429664"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:382376429664:security-group/sg-09211c77b47c14fac",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-09211c77b47c14fac",
            "ingress": [
              {
                "cidr_blocks": [
                  "73.75.199.77/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "382376429664",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0ec4ebc165b30fcd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "data.dns_a_record_set.home_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:382376429664:vpc/vpc-0ec4ebc165b30fcd0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-06dc4e91f2aa5b2be",
            "default_route_table_id": "rtb-0936f560106052cbd",
            "default_security_group_id": "sg-09211c77b47c14fac",
            "dhcp_options_id": "dopt-09346f8f3b9d0db30",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0ec4ebc165b30fcd0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0936f560106052cbd",
            "owner_id": "382376429664",
            "tags": {
              "Name": "DefaultVPC",
              "env": "dev",
              "project": "wswp"
            },
            "tags_all": {
              "Name": "DefaultVPC",
              "env": "dev",
              "project": "wswp"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ddb5a74386eb6091",
            "arn": "arn:aws:ec2:us-east-2:382376429664:instance/i-0663e876433d088c7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0663e876433d088c7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.nano",
            "ipv6_address_count": 0,
            "key_name": "ec2_access",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03e3e6d7975e78b59",
            "private_dns": "ip-172-31-33-118.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.33.118",
            "public_dns": "ec2-18-188-91-59.us-east-2.compute.amazonaws.com",
            "public_ip": "18.188.91.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-048cebc77ee127f01",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08dd0960a1a7509b4",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09211c77b47c14fac"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "data.aws_ami.ubuntu",
            "data.aws_internet_gateway.default_gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:382376429664:internet-gateway/igw-0a2dd52e626ee40e0",
            "id": "igw-0a2dd52e626ee40e0",
            "owner_id": "382376429664",
            "vpc_id": "vpc-05148aa56490f4a10"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:382376429664:loadbalancer/app/wswp-lb/c67ab0623d686892",
            "arn_suffix": "app/wswp-lb/c67ab0623d686892",
            "desync_mitigation_mode": "defensive",
            "dns_name": "wswp-lb-1512642509.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:382376429664:loadbalancer/app/wswp-lb/c67ab0623d686892",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wswp-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-041903b2faee8ff00"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0243727dad538ae10"
              },
              {
                "subnet_id": "subnet-0ba910a4ebcc153b7"
              }
            ],
            "subnets": [
              "subnet-0243727dad538ae10",
              "subnet-0ba910a4ebcc153b7"
            ],
            "vpc_id": "vpc-05148aa56490f4a10",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:382376429664:listener/app/wswp-lb/c67ab0623d686892/b71f72395df0b575",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:382376429664:targetgroup/wswp-http-group/67ee4a66a197a462",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:382376429664:listener/app/wswp-lb/c67ab0623d686892/b71f72395df0b575",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:382376429664:loadbalancer/app/wswp-lb/c67ab0623d686892",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app-lb",
            "aws_lb_target_group.wswp_http_group",
            "aws_subnet.public_subnets",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:382376429664:listener/app/wswp-lb/c67ab0623d686892/803fb210a0af8288",
            "certificate_arn": "arn:aws:acm:us-east-2:382376429664:certificate/0a657f45-b227-4ee0-98f9-be6584494408",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:382376429664:targetgroup/wswp-https-group/e8a781a90f647fe9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:382376429664:listener/app/wswp-lb/c67ab0623d686892/803fb210a0af8288",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:382376429664:loadbalancer/app/wswp-lb/c67ab0623d686892",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.wswp_cert",
            "aws_acm_certificate_validation.cert_validation",
            "aws_lb.app-lb",
            "aws_lb_target_group.wswp_https_group",
            "aws_route53_record.validation_record",
            "aws_route53_zone.primary",
            "aws_subnet.public_subnets",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wswp_http_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:382376429664:targetgroup/wswp-http-group/67ee4a66a197a462",
            "arn_suffix": "targetgroup/wswp-http-group/67ee4a66a197a462",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:382376429664:targetgroup/wswp-http-group/67ee4a66a197a462",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wswp-http-group",
            "port": 9796,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05148aa56490f4a10"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wswp_https_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:382376429664:targetgroup/wswp-https-group/e8a781a90f647fe9",
            "arn_suffix": "targetgroup/wswp-https-group/e8a781a90f647fe9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:382376429664:targetgroup/wswp-https-group/e8a781a90f647fe9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wswp-https-group",
            "port": 9797,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05148aa56490f4a10"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:382376429664:route-table/rtb-0211fef7c9f654b3a",
            "id": "rtb-0211fef7c9f654b3a",
            "owner_id": "382376429664",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05148aa56490f4a10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:382376429664:route-table/rtb-0d98c0c597e693bed",
            "id": "rtb-0d98c0c597e693bed",
            "owner_id": "382376429664",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a2dd52e626ee40e0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05148aa56490f4a10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce5e93e1f5296434",
            "route_table_id": "rtb-0211fef7c9f654b3a",
            "subnet_id": "subnet-08083a96f521cbdc1"
          },
          "dependencies": [
            "aws_route_table.private_subnet_route_table",
            "aws_subnet.private_subnets",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fd5ca2725201331",
            "route_table_id": "rtb-0211fef7c9f654b3a",
            "subnet_id": "subnet-0349f7d48b04662a3"
          },
          "dependencies": [
            "aws_route_table.private_subnet_route_table",
            "aws_subnet.private_subnets",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b0803981aab7c34",
            "route_table_id": "rtb-0d98c0c597e693bed",
            "subnet_id": "subnet-0243727dad538ae10"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_subnet_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061d8a24fcdcf9052",
            "route_table_id": "rtb-0d98c0c597e693bed",
            "subnet_id": "subnet-0ba910a4ebcc153b7"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_subnet_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:382376429664:security-group/sg-0841d888474b7eca1",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0841d888474b7eca1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "140.177.227.122/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230522221043150800000004",
            "name_prefix": "terraform-",
            "owner_id": "382376429664",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05148aa56490f4a10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:382376429664:subnet/subnet-08083a96f521cbdc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08083a96f521cbdc1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "382376429664",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "SubnetType": "private"
            },
            "tags_all": {
              "SubnetType": "private"
            },
            "vpc_id": "vpc-05148aa56490f4a10"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:382376429664:subnet/subnet-0349f7d48b04662a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0349f7d48b04662a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "382376429664",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "SubnetType": "private"
            },
            "tags_all": {
              "SubnetType": "private"
            },
            "vpc_id": "vpc-05148aa56490f4a10"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:382376429664:subnet/subnet-0243727dad538ae10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0243727dad538ae10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "382376429664",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "SubnetType": "public"
            },
            "tags_all": {
              "SubnetType": "public"
            },
            "vpc_id": "vpc-05148aa56490f4a10"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:382376429664:subnet/subnet-0ba910a4ebcc153b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba910a4ebcc153b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "382376429664",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "SubnetType": "public"
            },
            "tags_all": {
              "SubnetType": "public"
            },
            "vpc_id": "vpc-05148aa56490f4a10"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:382376429664:vpc/vpc-05148aa56490f4a10",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-035d412c8a2877540",
            "default_route_table_id": "rtb-0eda7d2e84699e6f6",
            "default_security_group_id": "sg-041903b2faee8ff00",
            "dhcp_options_id": "dopt-09346f8f3b9d0db30",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05148aa56490f4a10",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eda7d2e84699e6f6",
            "owner_id": "382376429664"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "gateway-endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dynamodb",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:382376429664:vpc-endpoint/vpce-08a67128de00809d0",
            "cidr_blocks": [
              "35.71.102.128/26",
              "35.71.102.0/25",
              "52.94.4.0/24"
            ],
            "id": "vpce-08a67128de00809d0",
            "owner_id": "382376429664",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-4ca54025",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0211fef7c9f654b3a"
            ],
            "service_name": "com.amazonaws.us-east-2.dynamodb",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-05148aa56490f4a10"
          },
          "dependencies": [
            "aws_route_table.private_subnet_route_table",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:382376429664:vpc-endpoint/vpce-09ded187c702f458f",
            "cidr_blocks": [
              "18.34.252.0/22",
              "52.219.141.0/24",
              "18.34.72.0/21",
              "52.219.96.0/20",
              "52.219.224.0/21",
              "16.12.60.0/22",
              "52.219.232.0/22",
              "52.219.80.0/20",
              "3.5.128.0/22",
              "52.219.142.0/23",
              "3.5.132.0/23",
              "52.219.212.0/22",
              "52.219.176.0/22"
            ],
            "id": "vpce-09ded187c702f458f",
            "owner_id": "382376429664",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ba54012",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0211fef7c9f654b3a"
            ],
            "service_name": "com.amazonaws.us-east-2.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-05148aa56490f4a10"
          },
          "dependencies": [
            "aws_route_table.private_subnet_route_table",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "interface-endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "APIGateway",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:382376429664:vpc-endpoint/vpce-0eaa99bd170c227ac",
            "dns_entry": [
              {
                "dns_name": "vpce-0eaa99bd170c227ac-uiw426mx.execute-api.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0eaa99bd170c227ac-uiw426mx-us-east-2b.execute-api.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0eaa99bd170c227ac-uiw426mx-us-east-2a.execute-api.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0eaa99bd170c227ac",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0388048b96eefcd61",
              "eni-0b90a775daed1f846"
            ],
            "owner_id": "382376429664",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-041903b2faee8ff00"
            ],
            "service_name": "com.amazonaws.us-east-2.execute-api",
            "state": "available",
            "subnet_ids": [
              "subnet-0349f7d48b04662a3",
              "subnet-08083a96f521cbdc1"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05148aa56490f4a10"
          },
          "dependencies": [
            "aws_subnet.private_subnets",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "ECR1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:382376429664:vpc-endpoint/vpce-01c2e32ff2d3fb338",
            "dns_entry": [
              {
                "dns_name": "vpce-01c2e32ff2d3fb338-olzjmbxx.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-01c2e32ff2d3fb338-olzjmbxx-us-east-2a.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-01c2e32ff2d3fb338-olzjmbxx-us-east-2b.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-01c2e32ff2d3fb338",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0584c665e49902810",
              "eni-0d7ccbaf31076f593"
            ],
            "owner_id": "382376429664",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-041903b2faee8ff00"
            ],
            "service_name": "com.amazonaws.us-east-2.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-0349f7d48b04662a3",
              "subnet-08083a96f521cbdc1"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05148aa56490f4a10"
          },
          "dependencies": [
            "aws_subnet.private_subnets",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "ECR2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:382376429664:vpc-endpoint/vpce-045b22a2a8693f668",
            "dns_entry": [
              {
                "dns_name": "vpce-045b22a2a8693f668-t6ewubqc.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-045b22a2a8693f668-t6ewubqc-us-east-2b.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-045b22a2a8693f668-t6ewubqc-us-east-2a.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-045b22a2a8693f668",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-000d3be8bef0d8ea6",
              "eni-0351eb7e1aeaafa9e"
            ],
            "owner_id": "382376429664",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-041903b2faee8ff00"
            ],
            "service_name": "com.amazonaws.us-east-2.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-0349f7d48b04662a3",
              "subnet-08083a96f521cbdc1"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05148aa56490f4a10"
          },
          "dependencies": [
            "aws_subnet.private_subnets",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "ECS",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:382376429664:vpc-endpoint/vpce-0a6a4a6af3cab04c5",
            "dns_entry": [
              {
                "dns_name": "vpce-0a6a4a6af3cab04c5-zhnvoogl.ecs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0a6a4a6af3cab04c5-zhnvoogl-us-east-2a.ecs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0a6a4a6af3cab04c5-zhnvoogl-us-east-2b.ecs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0a6a4a6af3cab04c5",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-018d470dd64132cc3",
              "eni-064055f3478242354"
            ],
            "owner_id": "382376429664",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-041903b2faee8ff00"
            ],
            "service_name": "com.amazonaws.us-east-2.ecs",
            "state": "available",
            "subnet_ids": [
              "subnet-0349f7d48b04662a3",
              "subnet-08083a96f521cbdc1"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05148aa56490f4a10"
          },
          "dependencies": [
            "aws_subnet.private_subnets",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "ECSAgent",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:382376429664:vpc-endpoint/vpce-004c0fc0b81d0ae58",
            "dns_entry": [
              {
                "dns_name": "vpce-004c0fc0b81d0ae58-q9tbbkzh.ecs-a.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-004c0fc0b81d0ae58-q9tbbkzh-us-east-2b.ecs-a.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-004c0fc0b81d0ae58-q9tbbkzh-us-east-2a.ecs-a.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-004c0fc0b81d0ae58",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05cd65018ec9239ca",
              "eni-097f2518ca4b0561d"
            ],
            "owner_id": "382376429664",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-041903b2faee8ff00"
            ],
            "service_name": "com.amazonaws.us-east-2.ecs-agent",
            "state": "available",
            "subnet_ids": [
              "subnet-0349f7d48b04662a3",
              "subnet-08083a96f521cbdc1"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05148aa56490f4a10"
          },
          "dependencies": [
            "aws_subnet.private_subnets",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "ECSTelemetry",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:382376429664:vpc-endpoint/vpce-0f53da64f2adcc8da",
            "dns_entry": [
              {
                "dns_name": "vpce-0f53da64f2adcc8da-y10xwqt4.ecs-t.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0f53da64f2adcc8da-y10xwqt4-us-east-2b.ecs-t.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0f53da64f2adcc8da-y10xwqt4-us-east-2a.ecs-t.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0f53da64f2adcc8da",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06caf260417f5f99b",
              "eni-07345fac0bd6efb8d"
            ],
            "owner_id": "382376429664",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-041903b2faee8ff00"
            ],
            "service_name": "com.amazonaws.us-east-2.ecs-telemetry",
            "state": "available",
            "subnet_ids": [
              "subnet-0349f7d48b04662a3",
              "subnet-08083a96f521cbdc1"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05148aa56490f4a10"
          },
          "dependencies": [
            "aws_subnet.private_subnets",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    }
  ]
}